# software-web-manager

./: .gitignore  .gitmodules  DEPLOY.md  README.md  build.sh  deploy.env.example  go.work  go.work.sum
backend/: .env.example  Dockerfile  dev.sh  go.mod  go.sum
backend/migrations/: 0001_baseline.down.sql  0001_baseline.up.sql  0003_event_dimension_metrics.up.sql  0004_sso_sub.down.sql  0004_sso_sub.up.sql  0005_app_maintenance.down.sql  0005_app_maintenance.up.sql  0006_app_authz_keys.down.sql  0006_app_authz_keys.up.sql  0007_user_token_version.up.sql
backend/migrations_archive_before_baseline/: 0001_init.up.sql  0003_org_invites.down.sql  0003_org_invites.up.sql  0004_system_admin.down.sql  0004_system_admin.up.sql  0005_org_registration_materials.down.sql  0005_org_registration_materials.up.sql  0006_user_avatar_path.up.sql  0007_org_rejection.down.sql  0007_org_rejection.up.sql  0009_user_otp_fields.down.sql  0010_tickets.down.sql  0010_tickets.up.sql  0011_ticket_messages.down.sql  0011_ticket_messages.up.sql  0012_org_type.down.sql  0012_org_type.up.sql  0013_app_approval.down.sql  0013_app_approval.up.sql  0014_release_notes_url.down.sql  0014_release_notes_url.up.sql  (+45 more)
deploy/: .env.example  docker-compose.yml  nginx.conf
docs/: AliyunOSS.md  README.md  openapi.yaml
sdk/: .gitignore
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/swm_sdk/: client.hpp
sdk/cpp/src/: client.cpp
sdk/go/: go.mod  (+5 more)
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
web/: .env.development  .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+416 files in other folders)
