[package]
name = "swm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
serde_urlencoded = "0.7.1"
